Fixed the input form font size